Rename popular movies route to trending
