# backend/data/Filmit Swagger Spec.json
@@ -437,12 +437,12 @@
                 }
             }
         },
-        "/movie/popular":{
+        "/movie/trending":{
             "get":{
                 "tags":[
                     "Movie"
                 ],
-                "summary":"Paginated list of popular movies",
+                "summary":"Paginated list of trending movies",
                 "parameters":[
                     {
                         "in":"query",
@@ -453,7 +453,7 @@
                 ],
                 "responses":{
                     "200":{
-                        "description":"Discover search returned",
+                        "description":"Trending movies returned",
                         "content":{
                             "application/json":{
                                 "schema":{
